force-app/main/default/objects/Account_Plan_Contact__c/Account_Plan_Contact__c.object-meta.xml
<CustomObject>
    <description>Contact to be added under Account Plan. User can add existing contact or create a new from the same list. The contacts to be filtered for the selected account.</description>
    <label>Account Plan Contact</label>
    <nameField>
        <displayFormat>APC-{0000}</displayFormat>
        <label>AccountPlanContacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>