force-app/main/default/objects/Account_Plan_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Account_Plan_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>