force-app/main/default/objects/Account_Plan_Contact__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>HYPERLINK(Contact__r.Id, Contact__r.FirstName +&quot; &quot;+  Contact__r.LastName )</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>