force-app/main/default/objects/Account_Plan_Contact__c/validationRules/ValidateContactParentAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateContactParentAccount</fullName>
    <active>true</active>
    <description>Contact Account should be same as Account Plan Account</description>
    <errorConditionFormula>Account_Plan__r.Account__r.Id  &lt;&gt;  Contact__r.AccountId</errorConditionFormula>
    <errorMessage>Contact  parent Account should be same as Account Plan&#39;s parent  Account</errorMessage>
</ValidationRule>